# TuboDeImpedancia

./: .gitignore  CMakeLists.txt  Makefile  README.md  imgui.ini
.cache/clangd/index/: Application.cpp.2FC7EA0607088B50.idx
Z_Basura/: calibracion.h  main.cpp
include/: AudioHandler.h  AudioMaster.h  BasicAudioHandler.h  HcCalibrator.h  HolaMundo.h  SignalCalibrator.h  Structs.h  audiocapture.h  aumi_math.h  calibracion.h  callback_func.h  init_deps.h  preInitFunctions.h
output/: amplitudes.txt  d_amplitudes.txt  first_lfile.txt  first_rfile.txt  scnd_lfile.txt  scnd_rfile.txt
src/: Application.cpp  AudioMaster.cpp  BasicAudioHandler.cpp  HcCalibrator.cpp  SignalCalibrator.cpp  callback_func.cpp
